--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,15 @@
 body {
 }
+
+// global flex styles
+.flex {
+  display: flex;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.items-center {
+  align-items: center;
+}
