--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,21 @@
-body {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+// global margin padding
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container {
+  width: 90.5%;
 }
 
 // global flex styles
