style: load more btn margin added

--- a/src/components/home/index.module.scss
+++ b/src/components/home/index.module.scss
@@ -5,4 +5,9 @@
     margin-top: 1.75rem;
     margin-bottom: 2.125rem;
   }
+
+  .loadMoreBtn {
+    margin-top: 3.563rem;
+    margin-bottom: 3.875rem;
+  }
 }
