--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,10 @@
+@import "styles/base.scss";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .width-100 {
@@ -66,4 +70,16 @@
 
 .fw-700 {
   font-weight: 700;
+}
+
+.text-grey1 {
+  color: $grey-color1;
+}
+
+.text-grey2 {
+  color: $grey-color2;
+}
+
+.bg-white {
+  background-color: $white-color1;
 }
