style: task card heading, button

--- a/src/components/task/existing-task/task-card/index.module.scss
+++ b/src/components/task/existing-task/task-card/index.module.scss
@@ -4,8 +4,13 @@
   border: 1px solid $grey-color3;
   padding: 0.938rem;
 
+  .header {
+    font-size: 1.5rem;
+  }
+
   .date {
     margin-top: 0.563rem;
     margin-bottom: 1.5rem;
+    font-size: 0.875rem;
   }
 }
