--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,9 @@ $grey-color1: #32394b;
 $grey-color2: #bbbdd0;
 $grey-color3: #dde2ff;
 
+$violet-color1: #d1d8ff;
+$violet-color2: #7a8dfd;
+
 $green-color1: #0bc375;
 
 $white-color1: #ffffff;
