--- a/src/components/task/existing-task/edit-task/index.module.scss
+++ b/src/components/task/existing-task/edit-task/index.module.scss
@@ -7,7 +7,7 @@
   border-radius: 0.313rem;
   width: calc(100% - 1rem);
   padding: 0.25rem 0.5rem;
-  color: $grey-color1;
+  color: $black-color1;
   line-height: 1.172rem;
   font-size: 1rem;
 }
@@ -23,7 +23,7 @@
   .saveBtn {
     border: 1px solid $white-color1;
     padding: 0.563rem 0.813;
-    color: $grey-color1;
+    color: $black-color1;
     font-size: 1rem;
     line-height: 1.172rem;
   }
