--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,10 +1,15 @@
-$grey-color1: #32394b;
+$black-color1: #32394b;
 $grey-color2: #bbbdd0;
 $grey-color3: #dde2ff;
 
 $violet-color1: #d1d8ff;
 $violet-color2: #7a8dfd;
+$violet-color3: #f8f9ff;
 
 $green-color1: #0bc375;
 
 $white-color1: #ffffff;
+$black-color1: #32394b;
+
+$breakpoint-sm: 640px;
+$breakpoint-md: 1024px;
