refactor: css global classnames refactored

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -16,7 +16,7 @@
   border: none;
 }
 
-.container {
+.home-container {
   width: 80%;
 }
 
@@ -44,6 +44,6 @@
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.gap-34px {
+.card-gap {
   gap: 2.125rem;
 }
