--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,7 +9,8 @@ $violet-color3: #f8f9ff;
 $green-color1: #0bc375;
 
 $white-color1: #ffffff;
-$black-color1: #32394b;
+
+$red-color1: #e85f5f;
 
 $breakpoint-sm: 640px;
 $breakpoint-md: 1024px;
