style: remaining search field, responsive navbar , taskbar

--- a/src/components/layout/navbar/index.module.scss
+++ b/src/components/layout/navbar/index.module.scss
@@ -1,3 +1,11 @@
+@import "styles/base.scss";
+
 .navbar {
-  padding: 0.938rem 0;
+  .logoContainer {
+    padding: 0.938rem 0;
+
+    .heading {
+      margin-left: 0.875rem;
+    }
+  }
 }
