--- a/src/components/filter-btn-container/index.module.scss
+++ b/src/components/filter-btn-container/index.module.scss
@@ -1,29 +1,39 @@
 @import "styles/base.scss";
 
-.allBtn {
-  width: 3rem;
-  height: 2.25rem;
-  border: 1px solid $grey-color3;
-  border-radius: 0.313rem;
-  font-size: 1rem;
-  line-height: 1.172rem;
+.buttonContainer {
+  margin-top: 1rem;
+
+  .allBtn {
+    width: 3rem;
+    height: 2.25rem;
+    border: 1px solid $grey-color3;
+    border-radius: 0.313rem;
+    font-size: 1rem;
+    line-height: 1.172rem;
+  }
+
+  .incompleteBtn {
+    height: 2.25rem;
+    width: 6.938rem;
+    margin: 0 1.188rem;
+    border-radius: 0.313rem;
+    border: 1px solid $grey-color3;
+    font-size: 1rem;
+    line-height: 1.172rem;
+  }
+
+  .completeBtn {
+    height: 2.25rem;
+    width: 6.5rem;
+    border-radius: 0.313rem;
+    border: 1px solid $grey-color3;
+    font-size: 1rem;
+    line-height: 1.172rem;
+  }
 }
 
-.incompleteBtn {
-  height: 2.25rem;
-  width: 6.938rem;
-  margin: 0 1.188rem;
-  border-radius: 0.313rem;
-  border: 1px solid $grey-color3;
-  font-size: 1rem;
-  line-height: 1.172rem;
-}
-
-.completeBtn {
-  height: 2.25rem;
-  width: 6.5rem;
-  border-radius: 0.313rem;
-  border: 1px solid $grey-color3;
-  font-size: 1rem;
-  line-height: 1.172rem;
+@media only screen and (min-width: $breakpoint-sm) {
+  .buttonContainer {
+    margin-top: 0rem;
+  }
 }
