--- a/src/components/home-container/index.module.scss
+++ b/src/components/home-container/index.module.scss
@@ -1,8 +1,8 @@
 @import "styles/base.scss";
 
 .homeWrapper {
-  padding-top: 4rem;
   background-color: $violet-color3;
+  margin-top: 4rem;
 
   .heading {
     font-size: 1.875rem;
