style. input search field onclick visibility

--- a/src/components/base/search-field/index.module.scss
+++ b/src/components/base/search-field/index.module.scss
@@ -20,6 +20,15 @@
   }
 }
 
+.visibleSearchField {
+  opacity: 1;
+}
+
+.hiddenSearchField {
+  opacity: 0;
+  height: 0;
+}
+
 @media only screen and (min-width: $breakpoint-sm) {
   .formContainer {
     width: 45%;
