refactor: home button container classname

--- a/src/components/home-container/index.module.scss
+++ b/src/components/home-container/index.module.scss
@@ -1,7 +1,7 @@
 .homeWrapper {
   margin-top: 4rem;
 
-  .buttonContainer {
+  .actionBarContainer {
     margin-top: 1.75rem;
     margin-bottom: 2.125rem;
   }
