refactor: task card border imported from style const file

--- a/src/components/task/existing-task/task-card/index.module.scss
+++ b/src/components/task/existing-task/task-card/index.module.scss
@@ -1,5 +1,7 @@
+@import "styles/base.scss";
+
 .card {
-  border: 1px solid #dde2ff;
+  border: 1px solid $violet-color1;
   padding: 0.938rem;
 
   .date {
