refactor: base color name updated

--- a/src/components/task/existing-task/task-card/index.module.scss
+++ b/src/components/task/existing-task/task-card/index.module.scss
@@ -2,7 +2,7 @@
 
 .card {
   border-radius: 0.313rem;
-  border: 1px solid $grey-color3;
+  border: 1px solid $color-blue-hawkes;
   padding: 0.938rem;
 
   .header {
