--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -77,25 +77,25 @@
 }
 
 .text-white1 {
-  color: $white-color1;
+  color: $color-white;
 }
 
 .text-grey1 {
-  color: $grey-color1;
+  color: $color-grey-ship;
 }
 
 .text-grey2 {
-  color: $grey-color2;
+  color: $color-grey-french;
 }
 
 .text-green1 {
-  color: $green-color1;
+  color: $color-green-mint;
 }
 
 .bg-white {
-  background-color: $white-color1;
+  background-color: $color-white;
 }
 
 .bg-violet2 {
-  background-color: $violet-color2;
+  background-color: $color-blue-lavender;
 }
