--- a/src/components/task/existing-task/edit-task/index.module.scss
+++ b/src/components/task/existing-task/edit-task/index.module.scss
@@ -3,24 +3,24 @@
 .textArea {
   border-radius: 0.313rem;
   border: none;
-  color: $grey-color1;
+  color: $color-grey-ship;
   font-size: 1rem;
   line-height: 1.172rem;
-  outline: 3px solid $violet-color1;
+  outline: 3px solid $color-blue-tropical;
   padding: 0.25rem 0.5rem;
   width: calc(100% - 1rem);
 }
 
 .textArea:focus {
-  outline: 3px solid $violet-color1;
+  outline: 3px solid $color-blue-tropical;
 }
 
 .btnContainer {
   margin-top: 1.313rem;
 
   .saveBtn {
-    border: 1px solid $white-color1;
-    color: $grey-color1;
+    border: 1px solid $color-white;
+    color: $color-grey-ship;
     font-size: 1rem;
     line-height: 1.172rem;
     padding: 0.563rem 0.813;
