--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,10 +1,7 @@
-$grey-color1: #32394b;
-$grey-color2: #bbbdd0;
-$grey-color3: #dde2ff;
-
-$violet-color1: #d1d8ff;
-$violet-color2: #7a8dfd;
-
-$green-color1: #0bc375;
-
-$white-color1: #ffffff;
+$color-grey-ship: #32394b;
+$color-grey-french: #bbbdd0;
+$color-blue-hawkes: #dde2ff;
+$color-blue-tropical: #d1d8ff;
+$color-blue-lavender: #7a8dfd;
+$color-green-mint: #0bc375;
+$color-white: #ffffff;
