refactor: color base style classnames updated based on color code

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -76,19 +76,19 @@
   font-weight: 500;
 }
 
-.text-white1 {
+.text-white {
   color: $color-white;
 }
 
-.text-grey1 {
+.text-grey-ship {
   color: $color-grey-ship;
 }
 
-.text-grey2 {
+.text-grey-french {
   color: $color-grey-french;
 }
 
-.text-green1 {
+.text-green-mint {
   color: $color-green-mint;
 }
 
@@ -96,6 +96,6 @@
   background-color: $color-white;
 }
 
-.bg-violet2 {
+.bg-blue-lavender {
   background-color: $color-blue-lavender;
 }
