refactor: meaningful name added on base color code

--- a/src/components/filter-btn-container/index.module.scss
+++ b/src/components/filter-btn-container/index.module.scss
@@ -2,7 +2,7 @@
 
 .allBtn {
   border-radius: 0.313rem;
-  border: 1px solid $grey-color3;
+  border: 1px solid $color-blue-hawkes;
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
@@ -11,7 +11,7 @@
 
 .incompleteBtn {
   border-radius: 0.313rem;
-  border: 1px solid $grey-color3;
+  border: 1px solid $color-blue-hawkes;
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
@@ -21,7 +21,7 @@
 
 .completeBtn {
   border-radius: 0.313rem;
-  border: 1px solid $grey-color3;
+  border: 1px solid $color-blue-hawkes;
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
