--- a/src/components/home-container/index.module.scss
+++ b/src/components/home-container/index.module.scss
@@ -1,11 +1,11 @@
 @import "styles/base.scss";
 
 .homeWrapper {
-  background-color: $violet-color3;
+  background-color: $color-white-ghost;
   padding-top: 4rem;
 
   .heading {
-    color: $black-color1;
+    color: $color-grey-ship;
     font-size: 1.875rem;
     line-height: 2.197rem;
   }
@@ -15,9 +15,9 @@
     margin-top: 1.75rem;
 
     .createTaskBtn {
-      background-color: $violet-color2;
+      background-color: $color-blue-lavender;
       border-radius: 0.313rem;
-      color: $white-color1;
+      color: $color-white;
       font-size: 1rem;
       height: 2.25rem;
       line-height: 1.172rem;
