--- a/src/components/load-more-btn-container/index.module.scss
+++ b/src/components/load-more-btn-container/index.module.scss
@@ -2,9 +2,9 @@
 
 .loadMoreBtn,
 .showLessBtn {
-  background-color: $black-color1;
+  background-color: $color-grey-ship;
   border-radius: 5px;
-  color: $white-color1;
+  color: $color-white;
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
