--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,9 +5,8 @@ $color-blue-tropical: #d1d8ff;
 $color-blue-lavender: #7a8dfd;
 $color-green-mint: #0bc375;
 $color-white: #ffffff;
-
-$violet-color3: #f8f9ff;
-$red-color1: #e85f5f;
+$color-white-ghost: #f8f9ff;
+$color-red-bean: #e85f5f;
 
 $breakpoint-sm: 640px;
 $breakpoint-md: 1024px;
