fix: filter create button responsiveness in mobile view

--- a/src/components/filter-btn-container/index.module.scss
+++ b/src/components/filter-btn-container/index.module.scss
@@ -6,6 +6,8 @@
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
+  margin-top: 1.75rem;
+  margin-left: 1rem;
   width: 3rem;
 }
 
@@ -15,6 +17,7 @@
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
+  margin-top: 1.75rem;
   margin: 0 1.188rem;
   width: 6.938rem;
 }
@@ -25,5 +28,6 @@
   font-size: 1rem;
   height: 2.25rem;
   line-height: 1.172rem;
+  margin-top: 1.75rem;
   width: 6.5rem;
 }
