--- a/src/components/home-container/index.module.scss
+++ b/src/components/home-container/index.module.scss
@@ -12,7 +12,6 @@
 
   .actionBarContainer {
     margin-bottom: 2.125rem;
-    margin-top: 1.75rem;
 
     .createTaskBtn {
       background-color: $color-blue-lavender;
@@ -21,6 +20,8 @@
       font-size: 1rem;
       height: 2.25rem;
       line-height: 1.172rem;
+      margin-top: 1.75rem;
+      padding: 0.5rem;
       width: 6.45rem;
 
       .createTxt {
