refactor:meaningful name added on color code

--- a/src/components/base/search-field/index.module.scss
+++ b/src/components/base/search-field/index.module.scss
@@ -11,9 +11,9 @@
 
   .searchField {
     border-radius: 0.313rem;
-    border: 3px solid $violet-color1;
+    border: 3px solid $color-blue-tropical;
     box-sizing: border-box;
-    color: $black-color1;
+    color: $color-grey-ship;
     font-size: 1rem;
     height: 2rem;
     line-height: 1.172rem;
