--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -56,6 +56,10 @@
   justify-content: end;
 }
 
+.justify-start {
+  justify-content: start;
+}
+
 .items-center {
   align-items: center;
 }
@@ -65,6 +69,10 @@
 }
 
 @media only screen and (min-width: $breakpoint-sm) {
+  .justify-md-end {
+    justify-content: end;
+  }
+
   .flex-md-col {
     flex-direction: column;
   }
