style: create-task & existing task min height added

--- a/src/components/task/create-new/index.module.scss
+++ b/src/components/task/create-new/index.module.scss
@@ -5,6 +5,7 @@
   border-radius: 0.313rem;
   border: 1px solid $color-blue-hawkes;
   padding: 0.938rem;
+  min-height: 8rem;
 
   .textArea {
     border-radius: 0.313rem;
