--- a/src/components/task/existing-task/task-card/index.module.scss
+++ b/src/components/task/existing-task/task-card/index.module.scss
@@ -4,6 +4,7 @@
   border-radius: 0.313rem;
   border: 1px solid $color-blue-hawkes;
   padding: 0.938rem;
+  min-height: 8rem;
 
   .header {
     font-size: 1.5rem;
