--- a/src/components/task/existing-task/edit-task/index.module.scss
+++ b/src/components/task/existing-task/edit-task/index.module.scss
@@ -9,7 +9,6 @@
   outline: 3px solid $color-blue-tropical;
   padding: 0.25rem 0.5rem;
   width: calc(100% - 1rem);
-  width: calc(100% - 1rem);
 }
 
 .textArea:focus {
@@ -17,15 +16,16 @@
 }
 
 .btnContainer {
-  margin-top: 1.313rem;
+  margin-top: 0.813rem;
 
   .saveBtn {
-    border: 1px solid $color-white;
+    border-radius: 0.313rem;
+    border: 1px solid $color-blue-hawkes;
     color: $color-grey-ship;
     font-size: 1rem;
+    height: 2.25rem;
     line-height: 1.172rem;
-    padding: 0.563rem 0.813;
-    padding: 0.563rem 0.813;
+    width: 5.688rem;
   }
 
   .doneBtn {
