--- a/src/components/filter-btn-container/index.module.scss
+++ b/src/components/filter-btn-container/index.module.scss
@@ -1,6 +1,10 @@
 @import "styles/base.scss";
 
 .buttonContainer {
+  display: flex;
+  overflow-x: auto;
+  padding-bottom: 0.5rem;
+
   .allBtn {
     border-radius: 0.313rem;
     border: 1px solid $color-blue-hawkes;
@@ -8,7 +12,7 @@
     height: 2.25rem;
     line-height: 1.172rem;
     margin-top: 1rem;
-    width: 3rem;
+    padding: 0.5rem 0.813rem;
   }
 
   .incompleteBtn {
@@ -20,7 +24,7 @@
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 1rem;
-    width: 6.938rem;
+    padding: 0.5rem 0.813rem;
   }
 
   .completeBtn {
@@ -30,12 +34,13 @@
     height: 2.25rem;
     line-height: 1.172rem;
     margin-top: 1rem;
-    width: 6.5rem;
+    padding: 0.5rem 0.813rem;
   }
 }
 
 @media only screen and (min-width: $breakpoint-sm) {
   .buttonContainer {
     margin-top: 1.75rem;
+    padding-bottom: 0;
   }
 }
