refactor: base color name converted into understandable form

--- a/src/components/task/existing-task/task-card/index.module.scss
+++ b/src/components/task/existing-task/task-card/index.module.scss
@@ -1,7 +1,7 @@
 @import "styles/base.scss";
 
 .card {
-  border: 1px solid $violet-color1;
+  border: 1px solid $violet-color;
   padding: 0.938rem;
 
   .date {
