--- a/src/components/ActionButtonGroup/index.module.scss
+++ b/src/components/ActionButtonGroup/index.module.scss
@@ -1,15 +1,15 @@
 .actionButtons {
-  .doneBtn {
+  .doneButton {
     width: 1.5rem;
   }
 
-  .editBtn {
+  .editButton {
     width: 1.5rem;
     margin-left: 1.625rem;
     margin-right: 1.813rem;
   }
 
-  .deleteBtn {
+  .deleteButton {
     width: 1.25rem;
   }
 }
