--- a/src/components/HomeContainer/index.module.scss
+++ b/src/components/HomeContainer/index.module.scss
@@ -6,7 +6,7 @@
     margin-bottom: 2.125rem;
   }
 
-  .loadMoreBtn {
+  .loadMoreButton {
     margin-top: 3.563rem;
     margin-bottom: 3.875rem;
   }
