--- a/src/components/task/existing-task/edit-task/index.module.scss
+++ b/src/components/task/existing-task/edit-task/index.module.scss
@@ -23,7 +23,7 @@
     color: $color-grey-ship;
     font-size: 1rem;
     line-height: 1.172rem;
-    padding: 0.563rem 0.813;
+    padding: 0.563rem 0.813rem;
   }
 
   .doneBtn {
